Genre translation is moved from controller => service